--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs/config",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Nest - modern, fast, powerful node.js web framework (@config)",
   "author": "Kamil Mysliwiec",
   "license": "MIT",
@@ -14,7 +14,8 @@
     "test:integration": "jest --config ./tests/jest-e2e.json --runInBand"
   },
   "dependencies": {
-    "dotenv": "8.2.0"
+    "dotenv": "8.2.0",
+    "lodash.get": "4.4.2"
   },
   "devDependencies": {
     "@hapi/joi": "16.1.8",
@@ -30,7 +31,6 @@
     "husky": "3.1.0",
     "jest": "24.9.0",
     "lint-staged": "9.5.0",
-    "lodash.get": "4.4.2",
     "prettier": "1.19.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.0",
