--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs/config",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Nest - modern, fast, powerful node.js web framework (@config)",
   "author": "Kamil Mysliwiec",
   "license": "MIT",
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "dotenv": "8.2.0",
-    "lodash.get": "4.4.2"
+    "lodash.get": "4.4.2",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@hapi/joi": "16.1.8",
@@ -28,6 +29,7 @@
     "@types/jest": "24.0.23",
     "@types/lodash.get": "4.4.6",
     "@types/node": "7.10.8",
+    "@types/uuid": "^3.4.6",
     "husky": "3.1.0",
     "jest": "24.9.0",
     "lint-staged": "9.5.0",
