--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "dotenv": "8.2.0",
     "lodash.get": "4.4.2",
-    "lodash.set": "^4.3.2",
+    "lodash.set": "4.3.2",
     "uuid": "3.3.3"
   },
   "devDependencies": {
