fix(): update to the latest version of uuid

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dotenv-expand": "5.1.0",
     "lodash.get": "4.4.2",
     "lodash.set": "4.3.2",
-    "uuid": "3.4.0"
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
@@ -36,18 +36,18 @@
     "@types/lodash.get": "4.4.6",
     "@types/lodash.set": "4.3.6",
     "@types/node": "7.10.8",
+    "@types/uuid": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "2.23.0",
     "@typescript-eslint/parser": "2.23.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-import": "2.20.1",
-    "release-it": "13.0.2",
-    "@types/uuid": "3.4.7",
     "husky": "4.2.3",
     "jest": "25.1.0",
     "lint-staged": "10.0.8",
     "prettier": "1.19.1",
     "reflect-metadata": "0.1.13",
+    "release-it": "13.0.2",
     "rimraf": "3.0.2",
     "rxjs": "6.5.4",
     "ts-jest": "25.2.1",
