--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "lodash.get": "4.4.2",
+    "lodash.has": "4.5.2",
     "lodash.set": "4.3.2",
     "uuid": "8.3.0"
   },
@@ -34,6 +35,7 @@
     "@types/hapi__joi": "17.1.6",
     "@types/jest": "26.0.15",
     "@types/lodash.get": "4.4.6",
+    "@types/lodash.has": "4.5.2",
     "@types/lodash.set": "4.3.6",
     "@types/node": "7.10.8",
     "@types/uuid": "8.3.0",
