feat: class-validator and class-transformer enhanced configuration class

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
     "eslint": "7.13.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-import": "2.22.1",
     "husky": "4.3.0",
@@ -55,6 +57,8 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^6.10.0 || ^7.0.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0"
   },
