--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "release": "release-it"
   },
   "dependencies": {
+    "@types/js-yaml": "^3.12.5",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "js-yaml": "^3.14.0",
     "lodash.get": "4.4.2",
     "lodash.set": "4.3.2",
     "uuid": "8.3.1"
