--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs/config",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Nest - modern, fast, powerful node.js web framework (@config)",
   "author": "Kamil Mysliwiec",
   "license": "MIT",
@@ -17,11 +17,10 @@
     "release": "release-it"
   },
   "dependencies": {
-    "@types/js-yaml": "^3.12.5",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "js-yaml": "^3.14.0",
     "lodash.get": "4.4.2",
+    "lodash.has": "4.5.2",
     "lodash.set": "4.3.2",
     "uuid": "8.3.1"
   },
@@ -29,23 +28,26 @@
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-angular": "11.0.0",
     "@hapi/joi": "17.1.1",
-    "@nestjs/common": "7.5.1",
-    "@nestjs/core": "7.5.1",
-    "@nestjs/platform-express": "7.5.1",
-    "@nestjs/testing": "7.5.1",
+    "@nestjs/common": "7.5.2",
+    "@nestjs/core": "7.5.2",
+    "@nestjs/platform-express": "7.5.2",
+    "@nestjs/testing": "7.5.2",
     "@types/hapi__joi": "17.1.6",
     "@types/jest": "26.0.15",
+    "@types/js-yaml": "^3.12.5",
     "@types/lodash.get": "4.4.6",
+    "@types/lodash.has": "4.5.6",
     "@types/lodash.set": "4.3.6",
     "@types/node": "7.10.8",
     "@types/uuid": "8.3.0",
-    "@typescript-eslint/eslint-plugin": "4.7.0",
-    "@typescript-eslint/parser": "4.7.0",
+    "@typescript-eslint/eslint-plugin": "4.8.0",
+    "@typescript-eslint/parser": "4.8.0",
     "eslint": "7.13.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-import": "2.22.1",
     "husky": "4.3.0",
     "jest": "26.6.3",
+    "js-yaml": "^3.14.0",
     "lint-staged": "10.5.1",
     "prettier": "2.1.2",
     "reflect-metadata": "0.1.13",
