--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "url": "https://github.com/nestjs/config#readme",
   "scripts": {
     "build": "rimraf -rf dist && tsc -p tsconfig.json",
+    "format": "prettier --write \"{lib,test}/**/*.ts\"",
     "lint": "eslint 'lib/**/*.ts' --fix",
     "prepublish:npm": "npm run build",
     "publish:npm": "npm publish --access public",
@@ -37,7 +38,7 @@
     "@types/lodash.get": "4.4.6",
     "@types/lodash.has": "4.5.6",
     "@types/lodash.set": "4.3.6",
-    "@types/node": "7.10.8",
+    "@types/node": "14.14.25",
     "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "4.15.0",
     "@typescript-eslint/parser": "4.15.0",
