--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "typescript": "4.3.5"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.0.0",
+    "@nestjs/common": "^7.0.0 || ^8.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^6.0.0 || ^7.2.0"
   },
   "lint-staged": {
     "*.ts": [
