--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "noLib": false,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
+    "useUnknownInCatchVariables": false,
     "experimentalDecorators": true,
     "target": "es6",
     "sourceMap": false,
