feat(): add asProvider helper method to config namespaces

--- a/.npmignore
+++ b/.npmignore
@@ -6,11 +6,15 @@ package-lock.json
 tslint.json
 tsconfig.json
 .prettierrc
+.commitlintrc.json
+.eslintignore
+.eslintrc.js
 
 # github
 .github
 CONTRIBUTING.md
 renovate.json
+.release-it.json
 
 # ci
 .circleci
