--- a/package.json
+++ b/package.json
@@ -47,14 +47,12 @@
     "reflect-metadata": "0.1.13",
     "release-it": "15.11.0",
     "rimraf": "5.0.1",
-    "rxjs": "7.8.1",
     "ts-jest": "29.1.0",
     "typescript": "5.1.3"
   },
   "peerDependencies": {
-    "@nestjs/common": "^7.0.0 || ^8.0.0 || ^9.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.0.0 || ^7.2.0"
+    "@nestjs/common": "^8.0.0 || ^9.0.0 || ^10.0.0",
+    "reflect-metadata": "^0.1.13"
   },
   "lint-staged": {
     "*.ts": [
