--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "dotenv": "16.4.5",
     "dotenv-expand": "10.0.0",
-    "lodash": "4.17.21",
-    "uuid": "9.0.1"
+    "lodash": "4.17.21"
   },
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
@@ -33,7 +32,6 @@
     "@types/jest": "29.5.12",
     "@types/lodash": "4.17.0",
     "@types/node": "20.12.7",
-    "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
     "eslint": "8.57.0",
