--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "16.4.5",
     "dotenv-expand": "10.0.0",
+    "glob": "^11.0.0",
     "lodash": "4.17.21"
   },
   "devDependencies": {
