--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "dependencies": {
     "dotenv": "16.4.7",
-    "dotenv-expand": "10.0.0",
+    "dotenv-expand": "12.0.1",
     "lodash": "4.17.21"
   },
   "devDependencies": {
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-angular": "19.7.0",
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.18.0",
     "@nestjs/common": "11.0.1",
     "@nestjs/core": "11.0.1",
     "@nestjs/platform-express": "11.0.1",
@@ -32,11 +34,10 @@
     "@types/jest": "29.5.14",
     "@types/lodash": "4.17.14",
     "@types/node": "22.10.7",
-    "@typescript-eslint/eslint-plugin": "8.20.0",
-    "@typescript-eslint/parser": "8.20.0",
     "eslint": "9.18.0",
     "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-prettier": "5.2.2",
+    "globals": "15.14.0",
     "husky": "9.1.7",
     "jest": "29.7.0",
     "joi": "17.13.3",
@@ -47,10 +48,11 @@
     "rimraf": "6.0.1",
     "rxjs": "7.8.1",
     "ts-jest": "29.2.5",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.20.0"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0",
+    "@nestjs/common": "^10.0.0 || ^11.0.0",
     "rxjs": "^7.1.0"
   },
   "lint-staged": {
