--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "dotenv": "16.4.7",
     "dotenv-expand": "12.0.2",
-    "lodash": "4.17.21"
+    "es-toolkit": "^1.39.3"
   },
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
@@ -32,7 +32,6 @@
     "@nestjs/platform-express": "11.1.3",
     "@nestjs/testing": "11.1.3",
     "@types/jest": "30.0.0",
-    "@types/lodash": "4.17.18",
     "@types/node": "22.15.32",
     "eslint": "9.29.0",
     "eslint-config-prettier": "10.1.5",
