--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "dotenv": "16.4.7",
     "dotenv-expand": "12.0.2",
-    "lodash": "4.17.21"
+    "lodash": "4.17.21",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
