--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "dotenv": "16.4.7",
     "dotenv-expand": "12.0.2",
-    "lodash": "4.17.21",
-    "zod": "^4.1.5"
+    "lodash": "4.17.21"
   },
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
@@ -50,7 +49,8 @@
     "rxjs": "7.8.2",
     "ts-jest": "29.4.1",
     "typescript": "5.9.2",
-    "typescript-eslint": "8.41.0"
+    "typescript-eslint": "8.41.0",
+    "zod": "^4.1.5"
   },
   "peerDependencies": {
     "@nestjs/common": "^10.0.0 || ^11.0.0",
