--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/core": "11.1.10",
     "@nestjs/platform-express": "11.1.10",
     "@nestjs/testing": "11.1.10",
+    "@standard-schema/spec": "^1.1.0",
     "@types/jest": "30.0.0",
     "@types/lodash": "4.17.21",
     "@types/node": "24.10.4",
@@ -40,7 +41,7 @@
     "globals": "16.5.0",
     "husky": "9.1.7",
     "jest": "30.2.0",
-    "joi": "18.0.2",
+    "joi": "^18.0.2",
     "lint-staged": "16.2.7",
     "prettier": "3.7.4",
     "reflect-metadata": "0.2.2",
